[project]
name = "2025fy-ge70501-chap-mid-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databases[sqlite]>=0.9.0",
    "greenlet>=3.2.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
